--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,78 @@
+body,
+html {
+  height: 100%;
+}
+.background {
+  background-image: url("./Images/music_background.jpg");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+header {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: #4bb1fc;
+  font-size: 40px;
+}
+
+.song-holder {
+padding: 1em;
+    background-color: #2d5d74;
+    border-radius: 7px;
+    width: 35rem;
+    height: 30rem;}
+
+form {
+  box-sizing: border-box;
+  border-radius: 7px;
+}
+
+label {
+  display: inline-block;
+  width: 150px;
+  text-align: right;
+}
+
+input[type=text]{
+  text-align: left;
+  width: 20rem;
+  padding: 4px 13px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
 
 
-body, html {
-    height: 100%;
-  }
-  .background {
-    background-image: url("./Images/music_background.jpg");
-    height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-.card {
-    border: 1px;
-    border-style: solid;
-    border-color: black;
-    background-color: #2D5D74;
-
-  }
-container-fluid {
+button {
+  color: black;
+  background-color: #4bb1fc;
+  float: right;
   
 }
 
+button:hover {
+  background-color: #4bb1fc;
+  color: black;
+}
+
+button:active {
+  background-color: #2a6ab8;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 
 h2 {
-    size: 8px;
-    color: black
-    
+  size: 8px;
+  color: black;
 }
 
 table {
-  font-weight: bold; 
+  font-weight: bold;
 }
 
 th {
   font-size: larger;
-}
-
- {
-  
+  padding-right: 25px;
 }
 
